--- a/index.Rmd
+++ b/index.Rmd
@@ -1,8 +1,9 @@
 ---
-title: "Themed dashboard"
+title: "French, German, Korean, Spanish Hip-hop"
 output: 
   flexdashboard::flex_dashboard:
     storyboard: true
+    self_contained: false
     theme:
       bg: "#121212"  
       fg: "#E0E0E0"   
@@ -35,58 +36,502 @@ library(ggdendro)
 
 ```{r}
 library(patchwork)
-```
-### Hierachical clustering for cloud rap playlist Classifier 1 
-
-
-```{r, results = 'hide'}
-library(tidyverse)
-library(tidymodels)
-library(ggdendro)
-library(heatmaply)
-library(spotifyr)
-library(compmus)
-
-get_conf_mat <- function(fit) {
-  outcome <- .get_tune_outcome_names(fit)
-  fit |> 
-    collect_predictions() |> 
-    conf_mat(truth = outcome, estimate = .pred_class)
-}  
-
-get_pr <- function(fit) {
-  fit |> 
-    conf_mat_resampled() |> 
-    group_by(Prediction) |> mutate(precision = Freq / sum(Freq)) |> 
-    group_by(Truth) |> mutate(recall = Freq / sum(Freq)) |> 
-    ungroup() |> filter(Prediction == Truth) |> 
-    select(class = Prediction, precision, recall)
-}  
+library(tidyr)
+library(ggplot2)
 ```
 
+### A transcultural,computational musiclogy comparitive study on Hip-pop music
 
+The corpus of choice are the current popular tracks across 4 different cultures where a relatively larger audience base and hippop culture is active, these are french, german, spanish(latin american), and korean hip-pop
+
+Spanish(Latin american) Hip-hop: <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4cy45EPpNjdniwLvfLDt0K?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+German Hip-hop: <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5k0hLNPNjD7iYs1PMtHEyM?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+Korean Hip-hop: <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6eCZ6NrzVYcPB1WjlMeDV9?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+French Hip-hop: <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0FiYE4GULpT2A2G682GdWd?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+### A transcultural,computational musiclogy comparitive study on Hip-pop music, research question and Assumptions
+
+How do the audio features of the most popular hip-hop tracks vary across different linguistic and cultural contexts in the current year?
+
+This question invites an analysis of how musical trends and listener preferences might differ by culture, as reflected in the music's audio features (e.g., danceability, energy, valence).
+
+What can the popularity and audio features of hip-hop tracks across languages tell us about the global influence of certain musical characteristics?
+
+This question focuses on identifying which musical features are universally appealing or culturally specific in the context of hip-hop. How does the lyrical content (as inferred from speechiness, instrumentalness, )
+
+### Trends in the Hip-pop music in different languages/cultures
 
 ```{r}
-library(tidyverse)
-```
-
-```{r}
-library(tidymodels)
+es <- readRDS(file = "data/es.RDS")
 ```
 
 
 ```{r}
-cloud<-get_playlist_audio_features("", "1sIcT9bfCD4C53ZjKXWy7M")
+fr <- readRDS(file = "data/fr.RDS")
 ```
 
 ```{r}
-cloud <-
-  head(cloud,20) |>
-  add_audio_analysis() |>
+kr <- readRDS(file = "data/kr.RDS")
+de <- readRDS(file = "data/de.RDS")
+
+```
+
+
+```{r}
+playlist_files <- list(
+  fr = 'data/fr.rds',
+  de = 'data/de.rds',
+  es = 'data/es.rds',
+  kr = 'data/kr.rds'
+)
+
+
+# Step 2: Function to load features from local RDS files
+load_playlist_features <- function(file_path) {
+  features <- readRDS(file_path)
+  return(features)
+}
+
+# Step 3: Load all playlists' features
+playlist_features <- lapply(playlist_files, load_playlist_features)
+```
+
+```{r}
+#average features 
+average_features <- sapply(playlist_features, function(features) {
+  data.frame(
+    danceability = mean(features$danceability, na.rm = TRUE),
+    energy = mean(features$energy, na.rm = TRUE),
+    valence = mean(features$valence, na.rm = TRUE),
+    speechiness = mean(features$speechiness, na.rm = TRUE),
+    instrumentalness = mean(features$instrumentalness, na.rm = TRUE),
+    tempo = mean(features$tempo, na.rm = TRUE),
+    acousticness = mean(features$acousticness, na.rm = TRUE),
+    liveness = mean (features$liveness, na.rm=TRUE),
+    loudness = mean (features$loudness, na.rm= TRUE)
+  )
+}, simplify = FALSE)
+
+
+average_features_df <- do.call(rbind, average_features)
+row.names(average_features_df) <- names(average_features)
+average_features_df$Playlist <- row.names(average_features_df)
+
+```
+
+```{r}
+# Reshape the data 
+average_features_long <- pivot_longer(average_features_df, 
+                                      cols = c(danceability, energy, valence, speechiness, instrumentalness,liveness,loudness, acousticness,tempo), 
+                                      names_to = "Feature", 
+                                      values_to = "Average")
+
+ggplot(average_features_long, aes(x = Playlist, y = Average, fill = Feature)) +
+  geom_bar(stat = "identity", position = position_dodge(), width = 0.7) +
+  theme_minimal() +
+  labs(title = "Average Spotify Audio Features Across Playlists", x = "De=German Es=Spanish Fr=French Kr=Korean", y = "Average Value") +
+  scale_fill_brewer(palette = "Set3") +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
+  facet_wrap(~Feature, scales = "free_y", ncol = 3)  
+
+
+```
+
+------------------------------------------------------------------------
+
+From the graph we can see that the average value of the audio features of the four hip-hop playlists shows the most variety in instrumentalness, acouscticness, valence, speechiness and loudness. Spanish hip-hop music has the highest speechiness, instrumentalness, acousticness and valence, While french music has the lowest instrumentalness, speechiness, and energy. German hip-hop music is the lowest in valence and instrumentalness, while Korean hip-hip music is the highest in energy and valence, but lowest in loudness and acousticness and speechiness.
+
+This exploratory analysis provides great insight into the difference in the popular hip-hop music across these cultures, which could be a result of a variety of factors including historical music influences,linguistic characteristics, trends and the difference in the taste of the listeners(because in reversed that's also why they became so popular). This analysis gives us a good base for our further correlation, regression, single track analysis, and clustering.
+
+### correlation
+
+```{r}
+all_features <- do.call(rbind, lapply(names(playlist_features), function(lang) {
+  df <- playlist_features[[lang]]
+  df$language <- lang
+  return(df)
+}))
+
+numeric_columns <- c("danceability", "energy", "valence", "speechiness", "instrumentalness", "tempo","liveness","loudness","acousticness")
+all_features[numeric_columns] <- lapply(all_features[numeric_columns], as.numeric)
+
+```
+
+```{r}
+correlation_matrix <- cor(all_features[, numeric_columns], use = "complete.obs")
+
+
+library(ggplot2)
+library(reshape2) 
+
+correlation_matrix_melted <- melt(correlation_matrix)
+ggplot(correlation_matrix_melted, aes(Var1, Var2, fill = value)) +
+  geom_tile() +
+  scale_fill_gradient2(low = "blue", high = "red", mid = "white", midpoint = 0) +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1)) +
+  labs(x = "", y = "", title = "Correlation Matrix of Audio Features", fill = "Correlation")
+```
+
+------------------------------------------------------------------------
+
+Loudness and energy have the strongest correlation, and
+
+### chroma
+
+```{r}
+
+get_pitch_data <- function(features) {
+  pitch_data <- features %>%
+    select( key, mode) %>%
+    mutate(
+      major = as.numeric(mode == 1),
+      minor = as.numeric(mode == 0)
+    ) %>%
+    group_by(key) %>%
+    summarise(
+      Count = n(),
+      MajorCount = sum(major),
+      MinorCount = sum(minor),
+    ) %>%
+    arrange(key)
+  return(pitch_data)
+}
+
+# Analyze pitch data for each playlist
+pitch_analysis <- lapply(playlist_features, get_pitch_data)
+```
+
+```{r}
+
+key_labels <- c('C', 'C#', 'D', 'D#', 'E', 'F', 'F#', 'G', 'G#', 'A', 'A#', 'B')
+
+
+pitch_df <- bind_rows(
+  lapply(names(pitch_analysis), function(playlist_name) {
+    df <- pitch_analysis[[playlist_name]]
+    df$Playlist <- playlist_name  # this ensures that playlist names are correctly assigned
+    df
+  }),
+  .id = 'Playlist_id'
+)
+
+
+ggplot(pitch_df, aes(x = as.factor(key), y = Count, fill = Playlist)) +
+  geom_bar(stat = 'identity', position = 'dodge') +
+  scale_x_discrete(labels = key_labels) +  # Apply the pitch class names
+  scale_fill_brewer(palette = 'Set3', labels = c('DE', 'FR', 'ES', 'KR')) +  # Ensure correct playlist labels
+  labs(x = 'Musical Key', y = 'Count', fill = 'Playlist', title = 'Pitch Class Profile Comparison Across Playlists') +
+  theme_minimal()
+
+```
+
+------------------------------------------------------------------------
+
+something to say here
+
+### What is the most representative track of each playlist?
+
+```{r}
+average_features_by_playlist <- all_features %>%
+  group_by(language) %>%
+  summarise(across(c(danceability, energy, valence, speechiness, acousticness, instrumentalness, liveness, tempo), mean, na.rm = TRUE))
+
+```
+
+```{r}
+
+library(dplyr)
+
+average_features_by_language <- all_features %>%
+  group_by(language) %>%
+  summarise(across(c(danceability, energy, valence, speechiness, acousticness, instrumentalness, liveness, tempo), mean, na.rm = TRUE))
+
+#distance
+calc_distance <- function(track_features, avg_features) {
+  sqrt(sum((track_features - avg_features)^2))
+}
+
+#empty list to store the most representative track for each language
+representative_tracks <- list()
+
+
+for (lang in unique(all_features$language)) {
+  tracks <- filter(all_features, language == lang)
+  
+
+  avg_features <- filter(average_features_by_language, language == lang)
+  avg_features_numeric <- select(avg_features, -language)
+  distances <- apply(select(tracks, c(danceability, energy, valence, speechiness, acousticness, instrumentalness, liveness, tempo)), 1, function(track_row) {
+    calc_distance(track_row, unlist(avg_features_numeric))
+  })
+  
+  min_distance_index <- which.min(distances)
+  
+  representative_track <- tracks[min_distance_index, ]
+  
+  representative_tracks[[lang]] <- representative_track
+}
+
+representative_tracks
+
+#print
+for (lang in names(representative_tracks)) {
+  representative_track <- representative_tracks[[lang]]
+  track_id <- representative_track$id  
+  
+  print(paste("Language:", lang, "- Most representative track:", track_id))
+}
+```
+
+```{=html}
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/7oIDr5FLnnjjwVyPQzd9fr?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+```
+based on comparing the audio features of each track against the average audio features of all tracks within the same group. The track whose features are closest to these averages is considered the most representative. This process assumes that the "average sound" of a playlist can be quantified by the mean values of its tracks' audio features, such as danceability, energy, valence, etc.
+
+The Steps Explained: Group and Average: For each group (identified by language in your dataset), calculate the average value for each audio feature across all tracks in that group. This gives a profile of what the average track looks like for each language in terms of its Spotify audio features.
+
+Calculate Distance: For each track in a group, calculate the Euclidean distance between its audio features and the group's average audio features. The Euclidean distance is a measure of the overall difference between two sets of numbers, in this case, audio feature vectors. Mathematically, if you have two vectors x and y, the Euclidean distance d between them is calculated as d = sqrt(sum((x - y)\^2)), where you subtract corresponding elements of y from x, square the results, sum these squared differences, and take the square root of the sum.
+
+Identify the Closest Track: The track with the smallest Euclidean distance to the average profile is considered the most representative of that group. It's the track whose features are, on average, closest to the mean features of the group, making it a sort of "central" track that best embodies the average characteristics of the group.
+
+Extract Track ID: Once the most representative track is identified, its track_id (or any other relevant identifier) can be extracted for further use, like retrieving the track on Spotify or analyzing it further.
+
+### Self-similarity matrices of most-representative tracks in each language
+
+#### french
+
+```{r}
+cd <-
+  get_tidy_audio_analysis("19xVZr90ICYmatwd3FsKbe") |>
+  compmus_align(bars, segments) |>
+  select(bars) |>
+  unnest(bars) |>
   mutate(
-    segments = map2(segments, key, compmus_c_transpose),
     pitches =
       map(segments,
+        compmus_summarise, pitches,
+        method = "acentre", norm = "manhattan"
+      )
+  ) |>
+  mutate(
+    timbre =
+      map(segments,
+        compmus_summarise, timbre,
+        method = "mean"
+      )
+  )
+bind_rows(
+  cd |> 
+    compmus_self_similarity(pitches, "aitchison") |> 
+    mutate(d = d / max(d), type = "Chroma"),
+  cd |> 
+    compmus_self_similarity(timbre, "euclidean") |> 
+    mutate(d = d / max(d), type = "Timbre")
+) |>
+  mutate() |> 
+  ggplot(
+    aes(
+      x = xstart + xduration / 2,
+      width = xduration,
+      y = ystart + yduration / 2,
+      height = yduration,
+      fill = d
+    )
+  ) +
+  geom_tile() +
+  coord_fixed() +
+  facet_wrap(~type) +
+  scale_fill_viridis_c(option = "E", guide = "none") +
+  theme_classic() + 
+  labs(x = "", y = "", title="Fr-Christian Dior")
+```
+
+German
+
+```{r}
+thot <-
+  get_tidy_audio_analysis("1PoxR9dqTzlGYFJkHnpNfS") |>
+  compmus_align(bars, segments) |>
+  select(bars) |>
+  unnest(bars) |>
+  mutate(
+    pitches =
+      map(segments,
+        compmus_summarise, pitches,
+        method = "acentre", norm = "manhattan"
+      )
+  ) |>
+  mutate(
+    timbre =
+      map(segments,
+        compmus_summarise, timbre,
+        method = "mean"
+      )
+  )
+bind_rows(
+  thot |> 
+    compmus_self_similarity(pitches, "aitchison") |> 
+    mutate(d = d / max(d), type = "Chroma"),
+  thot |> 
+    compmus_self_similarity(timbre, "euclidean") |> 
+    mutate(d = d / max(d), type = "Timbre")
+) |>
+  mutate() |> 
+  ggplot(
+    aes(
+      x = xstart + xduration / 2,
+      width = xduration,
+      y = ystart + yduration / 2,
+      height = yduration,
+      fill = d
+    )
+  ) +
+  geom_tile() +
+  coord_fixed() +
+  facet_wrap(~type) +
+  scale_fill_viridis_c(option = "E", guide = "none") +
+  theme_classic() + 
+  labs(x = "", y = "", title="De-Thot")
+```
+
+Spanish
+
+```{r}
+como <-
+  get_tidy_audio_analysis("1PoxR9dqTzlGYFJkHnpNfS") |>
+  compmus_align(bars, segments) |>
+  select(bars) |>
+  unnest(bars) |>
+  mutate(
+    pitches =
+      map(segments,
+        compmus_summarise, pitches,
+        method = "acentre", norm = "manhattan"
+      )
+  ) |>
+  mutate(
+    timbre =
+      map(segments,
+        compmus_summarise, timbre,
+        method = "mean"
+      )
+  )
+bind_rows(
+  como |> 
+    compmus_self_similarity(pitches, "aitchison") |> 
+    mutate(d = d / max(d), type = "Chroma"),
+  como |> 
+    compmus_self_similarity(timbre, "euclidean") |> 
+    mutate(d = d / max(d), type = "Timbre")
+) |>
+  mutate() |> 
+  ggplot(
+    aes(
+      x = xstart + xduration / 2,
+      width = xduration,
+      y = ystart + yduration / 2,
+      height = yduration,
+      fill = d
+    )
+  ) +
+  geom_tile() +
+  coord_fixed() +
+  facet_wrap(~type) +
+  scale_fill_viridis_c(option = "E", guide = "none") +
+  theme_classic() + 
+  labs(x = "", y = "", title="De-Thot")
+```
+
+Korean
+
+```{r}
+tl <-
+  get_tidy_audio_analysis("7gewLHcVTy1TrlwqSpuTJF") |>
+  compmus_align(bars, segments) |>
+  select(bars) |>
+  unnest(bars) |>
+  mutate(
+    pitches =
+      map(segments,
+        compmus_summarise, pitches,
+        method = "acentre", norm = "manhattan"
+      )
+  ) |>
+  mutate(
+    timbre =
+      map(segments,
+        compmus_summarise, timbre,
+        method = "mean"
+      )
+  )
+bind_rows(
+  tl |> 
+    compmus_self_similarity(pitches, "aitchison") |> 
+    mutate(d = d / max(d), type = "Chroma"),
+  tl |> 
+    compmus_self_similarity(timbre, "euclidean") |> 
+    mutate(d = d / max(d), type = "Timbre")
+) |>
+  mutate() |> 
+  ggplot(
+    aes(
+      x = xstart + xduration / 2,
+      width = xduration,
+      y = ystart + yduration / 2,
+      height = yduration,
+      fill = d
+    )
+  ) +
+  geom_tile() +
+  coord_fixed() +
+  facet_wrap(~type) +
+  scale_fill_viridis_c(option = "E", guide = "none") +
+  theme_classic() + 
+  labs(x = "", y = "", title="Kr- True love")
+```
+
+------------------------------------------------------------------------
+
+some analysis
+
+### Ceptrogram
+
+### Random forest
+
+```{r}
+#hiphop <-
+ # bind_rows(
+  #  fr |> mutate(playlist = "French Hiphop"),
+  #  de |> mutate(playlist = "German Hiphop"),
+   # kr |> mutate(playlist = "Korean Hiphop"),
+   # es |> mutate(playlist = "Latino Hiphop"),
+ # ) |> 
+ # add_audio_analysis()
+
+fr_analyzed <- readRDS(file = "data/fr_all.RDS")
+de_analyzed <- readRDS(file = "data/de_all.RDS")
+kr_analyzed <- readRDS(file = "data/kr_all.RDS")
+es_analyzed <- readRDS(file = "data/es_all.RDS")
+
+hiphop <- bind_rows(fr_analyzed, de_analyzed, kr_analyzed, es_analyzed)
+
+```
+
+
+
+```{r}
+hiphop_features <-
+  hiphop |>
+  mutate(playlist = factor(playlist)) |>
+  mutate(segments = map2(segments, key, compmus_c_transpose)) |>
+  mutate(
+    pitches =
+      map(
+        segments,
         compmus_summarise, pitches,
         method = "mean", norm = "manhattan"
       ),
@@ -102,13 +547,11 @@ cloud <-
   unnest(cols = c(pitches, timbre))
 ```
 
-
-
 ```{r}
-cloud_juice1 <-
+hiphop_recipe_all <-
   recipe(
-    track.name ~  #~ for prediction models, on left is the thing you are predicting, right side is the predictors) take out/add the things you wish, and rationalize your choice
-      danceability + # these are all the features
+    playlist ~
+      danceability +
       energy +
       loudness +
       speechiness +
@@ -118,364 +561,180 @@ cloud_juice1 <-
       valence +
       tempo +
       duration +
-      C + `C#|Db` + D + `D#|Eb` + #these are all the pitch classes
+      C + `C#|Db` + D + `D#|Eb` +
       E + `F` + `F#|Gb` + G +
       `G#|Ab` + A + `A#|Bb` + B +
-      c01 + c02 + c03 + c04 + c05 + c06 + #these are all the timbre features
+      c01 + c02 + c03 + c04 + c05 + c06 +
       c07 + c08 + c09 + c10 + c11 + c12,
-    data = cloud
+    data = hiphop_features           # Use the same name as the previous block.
   ) |>
-  step_center(all_predictors()) |> #you can also change here, center and scale, and range, which move everything to one scale.
+  step_center(all_predictors()) |>
+  step_scale(all_predictors())      # Converts to z-scores.
+  # step_range(all_predictors())    # Sets range to [0, 1].
+hiphop_cv <- hiphop_features |> vfold_cv(10)
+```
+
+```{r}
+forest_model <-
+  rand_forest() |>
+  set_mode("classification") |> 
+  set_engine("ranger", importance = "impurity")
+hiphop_forest <- 
+  workflow() |> 
+  add_recipe(hiphop_recipe_all) |> 
+  add_model(forest_model) |> 
+  fit_resamples(
+    hiphop_cv, 
+    control = control_resamples(save_pred = TRUE)
+  )
+```
+
+```{r}
+get_pr <- function(fit) {
+  fit |> 
+    conf_mat_resampled() |> 
+    group_by(Prediction) |> mutate(precision = Freq / sum(Freq)) |> 
+    group_by(Truth) |> mutate(recall = Freq / sum(Freq)) |> 
+    ungroup() |> filter(Prediction == Truth) |> 
+    select(class = Prediction, precision, recall)
+}  
+
+get_conf_mat <- function(fit) {
+  outcome <- .get_tune_outcome_names(fit)
+  fit |> 
+    collect_predictions() |> 
+    conf_mat(truth = outcome, estimate = .pred_class)
+}  
+```
+
+```{r}
+hiphop_forest |> get_pr()
+```
+
+```{r}
+workflow() |> 
+  add_recipe(hiphop_recipe_all) |> 
+  add_model(forest_model) |> 
+  fit(hiphop_features) |> 
+  pluck("fit", "fit", "fit") |>
+  ranger::importance() |> 
+  enframe() |> 
+  mutate(name = fct_reorder(name, value)) |> 
+  ggplot(aes(name, value)) + 
+  geom_col() + 
+  coord_flip() +
+  theme_minimal() +
+  labs(x = NULL, y = "Importance")
+```
+
+### KNN classification
+
+```{r}
+hiphop_recipe <-
+  recipe(
+    playlist ~ c01+c06+c12+tempo+acousticness+loudness+danceability+instrumentalness,
+    data = hiphop_features
+  ) |> 
+  step_center(all_predictors()) |>
+  step_scale(all_predictors())
+
+```
+
+```{r}
+knn_model <-
+  nearest_neighbor(neighbors = 1) |>
+  set_mode("classification") |> 
+  set_engine("kknn")
+hiphop_knn <-
+  workflow() |> 
+  add_recipe(hiphop_recipe) |> 
+  add_model(knn_model) |> 
+  fit_resamples(hiphop_cv, control = control_resamples(save_pred = TRUE))
+hiphop_knn |>
+  collect_predictions() |> 
+  conf_mat(truth = playlist, estimate = .pred_class) |> 
+  autoplot(type = "mosaic")
+```
+
+```{r}
+hiphop_knn |> get_conf_mat() |> autoplot(type = "heatmap")
+```
+
+### K-means clustering for songs in all 4 playlsits
+
+```{r}
+hiphop_juice <-
+  recipe(
+    track.name ~
+      danceability + valence+ 
+      loudness +
+      speechiness +
+      acousticness +
+      instrumentalness + c01+c06+c12+tempo,
+    data = hiphop_features
+  ) |>
+  step_center(all_predictors()) |>
   step_scale(all_predictors()) |> 
   # step_range(all_predictors()) |> 
-  prep(cloud |> mutate(track.name = str_trunc(track.name, 20))) |> #cut the track names to only 20 characters
-  juice() |> 
+  prep(hiphop_features |> mutate(track.name = str_trunc(track.name, 20))) |>
+  juice() |>
   column_to_rownames("track.name")
 ```
 
-
 ```{r}
-cloud_dist1 <- dist(cloud_juice1, method = "euclidean") #the distance
+library(cluster)     # for silhouette width
+library(NbClust)
+
+# Assuming 'data' is your dataset
+nb <- NbClust(hiphop_juice, distance = "euclidean", min.nc = 2, max.nc = 15, method = "kmeans")
+
+# Best number of clusters according to the majority rule
+best_nc <- nb$Best.nc[1]
+
+print(nb)
+
 ```
 
 ```{r}
-cloud_dist1 |> 
-  hclust(method = "single") |> # Try single, average, and complete. The linkage
-  dendro_data() |>
-  ggdendrogram() 
-```
-
-***
-As we can see, "Rest" and "Timebomb" are the most similar songs in this classifier. Upon listening, I noticed that these songs both share the elements as trap, and similar vocal voices and beat patterns. 
-
-
-
-
-
-### chordogram of "straight to the moon!" Aesthetic rap
-
-```{r, echo=FALSE}
-circshift <- function(v, n) {
-  if (n == 0) v else c(tail(v, n), head(v, -n))
-}
-
-#      C     C#    D     Eb    E     F     F#    G     Ab    A     Bb    B
-major_chord <-
-  c(   1,    0,    0,    0,    1,    0,    0,    1,    0,    0,    0,    0)
-minor_chord <-
-  c(   1,    0,    0,    1,    0,    0,    0,    1,    0,    0,    0,    0)
-seventh_chord <-
-  c(   1,    0,    0,    0,    1,    0,    0,    1,    0,    0,    1,    0)
-
-major_key <-
-  c(6.35, 2.23, 3.48, 2.33, 4.38, 4.09, 2.52, 5.19, 2.39, 3.66, 2.29, 2.88)
-minor_key <-
-  c(6.33, 2.68, 3.52, 5.38, 2.60, 3.53, 2.54, 4.75, 3.98, 2.69, 3.34, 3.17)
-
-chord_templates <-
-  tribble(
-    ~name, ~template,
-    "Gb:7", circshift(seventh_chord, 6),
-    "Gb:maj", circshift(major_chord, 6),
-    "Bb:min", circshift(minor_chord, 10),
-    "Db:maj", circshift(major_chord, 1),
-    "F:min", circshift(minor_chord, 5),
-    "Ab:7", circshift(seventh_chord, 8),
-    "Ab:maj", circshift(major_chord, 8),
-    "C:min", circshift(minor_chord, 0),
-    "Eb:7", circshift(seventh_chord, 3),
-    "Eb:maj", circshift(major_chord, 3),
-    "G:min", circshift(minor_chord, 7),
-    "Bb:7", circshift(seventh_chord, 10),
-    "Bb:maj", circshift(major_chord, 10),
-    "D:min", circshift(minor_chord, 2),
-    "F:7", circshift(seventh_chord, 5),
-    "F:maj", circshift(major_chord, 5),
-    "A:min", circshift(minor_chord, 9),
-    "C:7", circshift(seventh_chord, 0),
-    "C:maj", circshift(major_chord, 0),
-    "E:min", circshift(minor_chord, 4),
-    "G:7", circshift(seventh_chord, 7),
-    "G:maj", circshift(major_chord, 7),
-    "B:min", circshift(minor_chord, 11),
-    "D:7", circshift(seventh_chord, 2),
-    "D:maj", circshift(major_chord, 2),
-    "F#:min", circshift(minor_chord, 6),
-    "A:7", circshift(seventh_chord, 9),
-    "A:maj", circshift(major_chord, 9),
-    "C#:min", circshift(minor_chord, 1),
-    "E:7", circshift(seventh_chord, 4),
-    "E:maj", circshift(major_chord, 4),
-    "G#:min", circshift(minor_chord, 8),
-    "B:7", circshift(seventh_chord, 11),
-    "B:maj", circshift(major_chord, 11),
-    "D#:min", circshift(minor_chord, 3)
-  )
-
-
-
-key_templates <-
-  tribble(
-    ~name, ~template,
-    "Gb:maj", circshift(major_key, 6),
-    "Bb:min", circshift(minor_key, 10),
-    "Db:maj", circshift(major_key, 1),
-    "F:min", circshift(minor_key, 5),
-    "Ab:maj", circshift(major_key, 8),
-    "C:min", circshift(minor_key, 0),
-    "Eb:maj", circshift(major_key, 3),
-    "G:min", circshift(minor_key, 7),
-    "Bb:maj", circshift(major_key, 10),
-    "D:min", circshift(minor_key, 2),
-    "F:maj", circshift(major_key, 5),
-    "A:min", circshift(minor_key, 9),
-    "C:maj", circshift(major_key, 0),
-    "E:min", circshift(minor_key, 4),
-    "G:maj", circshift(major_key, 7),
-    "B:min", circshift(minor_key, 11),
-    "D:maj", circshift(major_key, 2),
-    "F#:min", circshift(minor_key, 6),
-    "A:maj", circshift(major_key, 9),
-    "C#:min", circshift(minor_key, 1),
-    "E:maj", circshift(major_key, 4),
-    "G#:min", circshift(minor_key, 8),
-    "B:maj", circshift(major_key, 11),
-    "D#:min", circshift(minor_key, 3)
-  )
-
-```
-
-
-```{r}
-moon <-
-  get_tidy_audio_analysis("5eBpfwTJBusVJp8VcLwokY") |>
-  compmus_align(sections, segments) |>
-  select(sections) |>
-  unnest(sections) |>
-  mutate(
-    pitches =
-      map(segments,
-        compmus_summarise, pitches,
-        method = "mean", norm = "manhattan"
-      )
-  )
+pca_result <- prcomp(hiphop_juice, scale. = TRUE)
+pca_scores <- as.data.frame(pca_result$x[, 1:2])
 ```
 
 ```{r}
-get_tidy_audio_analysis("5eBpfwTJBusVJp8VcLwokY") |>
-  compmus_align(bars, segments) |>
-  select(bars) |>
-  unnest(bars) |>
-  mutate(
-    pitches =
-      map(segments,
-        compmus_summarise, pitches,
-        method = "mean", norm = "manhattan"
-      )
-  ) |> 
-  compmus_match_pitch_template(chord_templates, "euclidean", "manhattan") |>
-  ggplot(
-    aes(x = start + duration / 2, width = duration, y = name, fill = d)
-  ) +
-  geom_tile() +
-  scale_fill_viridis_c(guide = "none") +
+set.seed(123)  # Ensure reproducibility
+kmeans_result <- kmeans(hiphop_juice, centers = best_nc, nstart = 25)
+```
+
+```{r}
+pca_scores$cluster <- as.factor(kmeans_result$cluster)
+```
+
+```{r}
+
+# Combine PCA scores, clustering results, and names into one data frame
+pca_scores <- data.frame(pca_result$x[, 1:2], cluster = kmeans_result$cluster)
+pca_scores <- cbind(pca_scores, hiphop_features[, c("track.name", "playlist_name")])
+
+# Create a ggplot
+p <- ggplot(pca_scores, aes(x = PC1, y = PC2, color = factor(cluster), text = paste("Track:", track.name, "<br>Playlist:", playlist_name))) +
+  geom_point() +
   theme_minimal() +
-  labs(x = "Time (s)", y = "")
-```
+  labs(title = "K-means Clustering")
 
-***
-
-[link to the song](https://open.spotify.com/track/5eBpfwTJBusVJp8VcLwokY?si=e290b9ebe2b04523)
-The chordogram of this aesthetic rap song shows a pattern of the chords switching among A7, E7, B7 and D7, however, when exactly the chord changes is not very clear from this graph. The level of measurement is based on each bar.There is no clear signs for modulations here, which makes sense because it is a rap song with simple musical structures.
-
-
-### Keygram of "straight to the moon!" Aesthetic rap
-
-
-```{r}
-moon |> 
-  compmus_match_pitch_template(
-    key_templates,         # Change to chord_templates if descired
-    method = "euclidean",  # Try different distance metrics
-    norm = "manhattan"     # Try different norms
-  ) |>
-  ggplot(
-    aes(x = start + duration / 2, width = duration, y = name, fill = d)
-  ) +
-  geom_tile() +
-  scale_fill_viridis_c(guide = "none") +
-  theme_minimal() +
-  labs(x = "Time (s)", y = "")
-```
-
-### Self similarity matrix "crossy roads"
-```{r}
-road <-
-  get_tidy_audio_analysis("3UOz51ElOJLPyRxuHbFOEW") |> # Change URI.
-  compmus_align(bars, segments) |>                     # Change `bars`
-  select(bars) |>                                      #   in all three
-  unnest(bars) |>                                      #   of these lines.
-  mutate(
-    pitches =
-      map(segments,
-        compmus_summarise, pitches,
-        method = "rms", norm = "euclidean"              # Change summary & norm.
-      )
-  ) |>
-  mutate(
-    timbre =
-      map(segments,
-        compmus_summarise, timbre,
-        method = "rms", norm = "euclidean"              # Change summary & norm.
-      )
-  )
-```
-
-
-```{r}
-
-
-timbreroad<- road |>
-  compmus_self_similarity(pitches, "cosine") |> 
-  ggplot(
-    aes(
-      x = xstart + xduration / 2,
-      width = xduration,
-      y = ystart + yduration / 2,
-      height = yduration,
-      fill = d
-    )
-  ) +
-  geom_tile() +
-  coord_fixed() +
-  scale_fill_viridis_c(guide = "none") +
-  theme_classic() +
-  labs(x = "", y = "", title = "chroma")
-
-
-chromaroad<- road |>
-  compmus_self_similarity(timbre, "cosine") |> 
-  ggplot(
-    aes(
-      x = xstart + xduration / 2,
-      width = xduration,
-      y = ystart + yduration / 2,
-      height = yduration,
-      fill = d
-    )
-  ) +
-  geom_tile() +
-  coord_fixed() +
-  scale_fill_viridis_c(guide = "none") +
-  theme_classic() +
-  labs(x = "", y = "", title = "timbre")
-
-# Combine the two plots side by side
-combined_plot <- timbreroad+ chromaroad
-# Display the combined plot
-combined_plot
-```
-
-***
-
-This aesthetic rap song has a very simple structure, basically it's a loop of melody playing in the background every 10 seconds-ish and the rapper raps without much pith changes, which is reflected in the self similarity matrxix of chroma and timbre here. The green part in both matrices reflect that there is a part around 20-50 seconds that is unique to other sections, which is in fact a change in the loop pattern,then it came back.
-
-[here is the song](https://open.spotify.com/track/3UOz51ElOJLPyRxuHbFOEW?si=963f41f0a4ce404c)
-
-### Aesthetic vs Cloud rap
-
-corpus discription The corpus I've chosen to explore a unique collection of music from Spotify, particularly focusing on playlists curated by the account "The Sound of Spotify." These playlists are distinguished by their meticulous categorization into highly specific and nuanced genres, made possible through Spotify's algorithms and computational analysis of musical elements. This meticulous approach to classification allows for an in-depth exploration of niche musical styles, making it a rich area for study and comparisons.
-
-Thus, the playlist I would like to analyse by the sound of spotify is The Sound of Aesthetic RapLinks to an external site., which is a more niche and regional genre that is close to aesthetic rap according to "the sound of spotify". aesthetic rap is a new term and genre which is described as "a subgenre of rap music that emphasizes a particular style, mood, or "aesthetic" quality in its production, lyrics, and overall presentation." But by listen through it, some of them have classical music influences and some are lo-fi vibes. The evidences show that the elements that are considered as "aesthetic is very nuanced and it would be fruitful for further investigation to see how can spotify detect the "aesthetics". In comparison, I would like to analyse the playlist of The sound of cloud raps. Cloud rap is another subgenre of rap, which has similar characteristics with aesthetic raps on its impression, some of the songs from both genre both feature ethereal, dreamy and lo-fi beats. The corpus will try to find out what spotify algorithms think about the difference between these genres.
-
-### Speechiness and Valence
-
-```{r}
-cloud<-get_playlist_audio_features("", "1sIcT9bfCD4C53ZjKXWy7M")
-cloud<-head(cloud,20)
-aes<-get_playlist_audio_features("", "2OY7wFfc4FIedjHBF95f9t")
-aes<-head(aes,20)
-```
-
-```{r}
-
-rap <-
-  bind_rows(
-     cloud |> mutate(category = "Cloud Rap"),
-     aes|> mutate(category = "Aesthetic Rap")
-  ) 
-
-rap|>
-  ggplot(aes(x= track.name, y = speechiness, color=category,size=valence )) +
-  geom_point()+
-  coord_flip()+labs(title = "Speechiness and Valence in Aesthetic and Cloud rap")
-
-
-#put the color to category. 
-
-
+# Convert ggplot to a plotly interactive plot
+p <- ggplotly(p, tooltip = "text") # 'text' specifies that the tooltip will show the 'text' aesthetic defined in ggplot
+p
 
 ```
 
 
-***
-In this visualization we can see that aesthetic rap songs(red) in the corpus are more speechy than cloud rap(blue), with no obvious difference in valence.
+### A multi-lingual rap salad: Generating new playlists based on K-means clustering
 
-### Cepstrogram for "Crossy Roads" Aesthetic rap
-
-```{r}
-road <-
-  get_tidy_audio_analysis("3UOz51ElOJLPyRxuHbFOEW") |> # Change URI.
-  compmus_align(bars, segments) |>                     # Change `bars`
-  select(bars) |>                                      #   in all three
-  unnest(bars) |>                                      #   of these lines.
-  mutate(
-    pitches =
-      map(segments,
-        compmus_summarise, pitches,
-        method = "rms", norm = "euclidean"              # Change summary & norm.
-      )
-  ) |>
-  mutate(
-    timbre =
-      map(segments,
-        compmus_summarise, timbre,
-        method = "rms", norm = "euclidean"              # Change summary & norm.
-      )
-  )
-
+```{=html}
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6rExGOsB7IsxtPdIHTjINn?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 ```
+### Conrtibutions and Limitations
 
-```{r}
-road |>
-  compmus_gather_timbre() |>
-  ggplot(
-    aes(
-      x = start + duration / 2,
-      width = duration,
-      y = basis,
-      fill = value
-    )
-  ) +
-  geom_tile() +
-  labs(x = "Time (s)", y = NULL, fill = "Magnitude") +
-  scale_fill_viridis_c() +                              
-  theme_classic()
-```
+Popularity as a Measure of Cultural Relevance: Assuming that the most popular tracks on Spotify accurately reflect cultural trends or preferences may overlook underground or emerging scenes not yet represented in mainstream charts.
 
-***
-
-The graph shows alternation of sections.
-
-From the cepstrogram we can see that this song has 3 parts and from 0-15 to 50-100 could be similar sections in terms of timbre.
-
-[here is the song](https://open.spotify.com/track/3UOz51ElOJLPyRxuHbFOEW?si=963f41f0a4ce404c)
-
-
-
-Extend your storyboard from last week to include an analysis of rhythm or tempo. For example:
-
-Make a histogram of tempi for different groups in your corpus.
-Make tempograms for outliers or archetypes in your corpus.
-Compare the tempo curves to the self-similarity matrices of multiple performances of the same piece (easiest for classical music).
-Submit the URL to your new web page for review.
+Limitations of Spotify's Metrics: Spotify's definition of 'popularity' and its audio features are proprietary and algorithmically determined. While useful, they provide a specific lens on music that may not capture all dimensions of its cultural or artistic significance.
